하아... 이미지 조정하기

--- a/css/global.css
+++ b/css/global.css
@@ -4,8 +4,8 @@
 @import url("https://cdn.jsdelivr.net/gh/fonts-archive/Jalnan/Jalnan.css");
 /* spoqa */
 @import url("//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css");
-/* BBH Bartle */
-@import url("https://fonts.googleapis.com/css2?family=BBH+Bartle&display=swap");
+/* Arc */
+@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap");
 /*  */
 :root {
   --bg-color: #fef4f4;
