--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,7 @@
 /*  */
 .inner {
   position: relative;
-  /* max-width: 1920px; */
+  /* max-width: 1280px; */
   width: 100%;
   padding: 0px 40px;
 }
@@ -128,6 +128,7 @@
 .nav .lang-wrap .lang-menu .lang {
   height: 44px;
   display: flex;
+  color: var(--black);
   align-items: center;
   justify-content: center;
   cursor: pointer;
@@ -139,10 +140,6 @@
 /* 모바일 파트 */
 .utils {
   display: none;
-  position: relative;
-  display: flex;
-  gap: var(--large);
-  align-items: center;
 }
 .mobile-menu {
   display: none;
@@ -228,11 +225,15 @@
 /* tal-swiper */
 .tal-section .inner .swiper {
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .tal-section .inner .swiper .swiper-wrapper {
   width: 100%;
   display: flex;
   align-items: center;
+  /* justify-content: center; */
   /* gap: 72px; */
 }
 .tal-section .inner .swiper .swiper-wrapper .swiper-slide {
@@ -243,7 +244,7 @@
   align-items: center;
   /* justify-content: center; */
   flex-direction: column;
-  /* transform: scale(0.9); */
+  transform: scale(0.9);
   transition:
     transform 0.6s ease,
     opacity 4s ease;
@@ -254,13 +255,12 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  /* height: 500px; */
+  height: 500px;
   /* width: 600px; */
   /* gap: 72px; */
   transform: scale(0.7);
   justify-content: space-between;
 }
-
 .tal-section .inner .swiper .swiper-wrapper .swiper-slide .slide-info img {
   display: flex;
   width: 600px;
@@ -278,7 +278,6 @@
   /* white-space: nowrap; */
   width: max-content;
 }
-
 .tal-section .inner .swiper .swiper-wrapper .swiper-slide-active .slide-info {
   position: relative;
   display: flex;
@@ -376,12 +375,13 @@
   align-items: center;
   justify-content: flex-start;
   width: 100%;
+  padding: 0 35px;
 }
 .grow-section .black-sticker-big {
   position: absolute;
-  top: 71px;
-  left: 1065px;
-  z-index: 5;
+  top: -30px;
+  left: 515px;
+  z-index: 10;
 }
 .grow-section .black-sticker-big img {
   width: 40px;
@@ -389,9 +389,9 @@
 }
 .grow-section .black-sticker-small {
   position: absolute;
-  top: 106px;
-  left: 1105px;
-  z-index: 5;
+  top: -5px;
+  left: 555px;
+  z-index: 10;
 }
 .grow-section .black-sticker-small img {
   width: 30px;
@@ -400,15 +400,16 @@
 .grow-section .inner {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  width: 1850px;
-  height: 1910px;
+  width: 100%;
+  /* height: 1910px; */
   gap: 72px;
-  padding: 126px 0;
+  padding-top: 126px;
   background: linear-gradient(39.83deg, #ffffff -6.23%, #c0fe0f 85.76%);
   border-radius: 35px;
   z-index: 5;
+  object-fit: cover;
 }
 .grow-section .inner .grow-title {
   position: relative;
@@ -433,28 +434,18 @@
   text-align: center;
   color: var(--black);
   line-height: 1.3;
-  font-size: var(--xxxx-large);
-  font-family:
-    "Jalnan",
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
-    sans-serif;
+  font-size: var(--xxx-large);
+  font-family: "Jalnan Gothic";
 }
 .grow-section .inner .grow-title .eye-sticker {
   position: absolute;
-  top: 5px;
-  left: 80px;
+  top: 30px;
+  left: 85px;
   z-index: 5;
+  /* transform: rotate(8deg); */
 }
 .grow-section .inner .grow-title .eye-sticker img {
-  width: 95px;
+  width: 90px;
   height: 75px;
 }
 .grow-section .inner .grow-title .sub-title {
@@ -469,14 +460,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10;
   width: 220px;
   height: 120px;
+  line-height: 0.99;
   background-color: var(--white);
   border-radius: 15px;
   gap: 15px;
 }
-.grow-section .inner .grow-title .sub-title .cumulative h5 {
+.grow-section .inner .grow-title .sub-title .cumulative h2 {
   font-size: 28px;
   font-weight: 600;
   text-align: center;
@@ -490,7 +481,7 @@
 .grow-section .inner .grow-title .sub-title .cumulative:hover {
   background-color: var(--black);
 }
-.grow-section .inner .grow-title .sub-title .cumulative:hover h5 {
+.grow-section .inner .grow-title .sub-title .cumulative:hover h2 {
   color: var(--white);
 }
 .grow-section .inner .grow-title .sub-title .cumulative:hover p {
@@ -502,18 +493,18 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10;
   width: 220px;
   height: 120px;
   background-color: var(--white);
   border-radius: 15px;
   gap: 15px;
+  line-height: 0.99;
 }
-.grow-section .inner .grow-title .sub-title .monthly h5 {
+.grow-section .inner .grow-title .sub-title .monthly h2 {
   font-size: 28px;
   font-weight: 600;
   text-align: center;
-  line-height: 1.1;
+
   color: var(--black);
 }
 .grow-section .inner .grow-title .sub-title .monthly p {
@@ -524,7 +515,7 @@
 .grow-section .inner .grow-title .sub-title .monthly:hover {
   background-color: var(--black);
 }
-.grow-section .inner .grow-title .sub-title .monthly:hover h5 {
+.grow-section .inner .grow-title .sub-title .monthly:hover h2 {
   color: var(--white);
 }
 .grow-section .inner .grow-title .sub-title .monthly:hover p {
@@ -536,14 +527,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10;
   width: 220px;
   height: 120px;
+  line-height: 0.99;
   background-color: var(--white);
   border-radius: 15px;
   gap: 15px;
 }
-.grow-section .inner .grow-title .sub-title .amount h5 {
+.grow-section .inner .grow-title .sub-title .amount h2 {
   font-size: 28px;
   font-weight: 600;
   text-align: center;
@@ -557,7 +548,7 @@
 .grow-section .inner .grow-title .sub-title .amount:hover {
   background-color: var(--black);
 }
-.grow-section .inner .grow-title .sub-title .amount:hover h5 {
+.grow-section .inner .grow-title .sub-title .amount:hover h2 {
   color: var(--white);
 }
 .grow-section .inner .grow-title .sub-title .amount:hover p {
@@ -565,11 +556,14 @@
 }
 .grow-section .inner .grow-media {
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
+  object-fit: cover;
 }
 .grow-section .inner .grow-media img {
-  width: 1850px;
-  height: 1070px;
+  width: 100%;
 }
 .grow-section .inner .grow-bot-title {
   position: relative;
@@ -1259,6 +1253,7 @@
   width: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: column;
   background-color: var(--black);
 }
@@ -1266,7 +1261,7 @@
   /* max-width: 1280px; */
   position: relative;
   display: flex;
-  width: 1600px;
+  /* width: 1600px; */
   /* gap: 10px; */
   flex-direction: column;
   /* padding: 30px 0; */
@@ -1296,7 +1291,7 @@
   justify-content: flex-start;
 }
 .footer-section .inner .contact .contact-info .contact-top .contact-title p {
-  font-size: 14px;
+  font-size: var(--xx-large);
   font-weight: 600;
   color: var(--g500);
 }
@@ -1311,8 +1306,8 @@
   justify-content: flex-start;
 }
 .footer-section .inner .contact .contact-info .contact-middle .contact-num p {
-  font-size: 14px;
-  /* font-weight: 600; */
+  font-size: var(--xxx-large);
+  font-weight: 600;
   color: var(--white);
 }
 .footer-section .inner .contact .contact-info .contact-middle .contact-email {
@@ -1321,8 +1316,8 @@
   justify-content: flex-start;
 }
 .footer-section .inner .contact .contact-info .contact-middle .contact-email p {
-  font-size: 14px;
-  /* font-weight: 600; */
+  font-size: var(--xxx-large);
+  font-weight: 600;
   color: var(--white);
 }
 .footer-section .inner .contact .sns-bottom {
@@ -1335,14 +1330,14 @@
   display: flex;
 }
 .footer-section .inner .contact .sns-bottom .sns-title p {
-  font-size: 14px;
+  font-size: var(--xx-large);
   font-weight: 600;
   color: var(--g300);
 }
 .footer-section .inner .contact .sns-bottom .sns-list {
   display: grid;
   gap: var(--xx-small);
-  font-size: 14px;
+  font-size: var(--xx-large);
   /* font-weight: 600; */
   color: var(--g300);
   width: 840px;
@@ -1369,7 +1364,7 @@
   align-items: center;
   justify-content: center;
   color: var(--g400);
-  font-size: 14px;
+  font-size: var(--xx-large);
 }
 /* footer - footer */
 .footer-section .inner .footer {
@@ -1416,7 +1411,20 @@
 }
 .footer-section .inner .footer .footer-middle p {
   color: var(--g300);
-  font-size: 14px;
+  font-size: var(--small);
+}
+.footer-section .inner .footer .footer-middle .middle-info {
+  position: relative;
+}
+.footer-section .inner .footer .footer-middle .middle-info .line-bar {
+  display: none;
+}
+.footer-section .inner .footer .footer-middle .middle-info .mobile-br {
+  display: none;
+}
+.footer-section .inner .footer .footer-middle .middle-info p {
+  color: var(--g300);
+  font-size: var(--small);
 }
 .footer-section .inner .footer .footer-bottom {
   position: relative;
@@ -1429,7 +1437,7 @@
   position: relative;
 }
 .footer-section .inner .footer .footer-bottom .personal p {
-  font-size: 14px;
+  font-size: var(--medium);
   font-weight: 600;
   color: var(--white);
 }
@@ -1437,20 +1445,31 @@
   position: relative;
 }
 .footer-section .inner .footer .footer-bottom .copy span {
-  font-size: 14px;
+  font-size: var(--small);
   color: var(--g300);
 }
 
 /* 태블릿 반응형 */
-@media (max-width: 768px) {
+@media (max-width: 1023px) {
   .footer-section .inner .contact .sns-bottom .sns-list {
     grid-template-columns: 1fr;
   }
 }
-
 /* 모바일 반응형 */
-@media (max-width: 375px) {
+@media (max-width: 767px) {
   .footer-section .inner .contact .sns-bottom .sns-list {
     grid-template-columns: 1fr;
+  }
+  .footer-section .inner .footer .footer-middle .middle-info {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer-section .inner .footer .footer-middle .middle-info .line-bar {
+    display: none;
+  }
+  .footer-section .inner .footer .footer-middle .middle-info .mobile-br {
+    display: block;
   }
 }
