--- a/css/home.css
+++ b/css/home.css
@@ -133,7 +133,6 @@
   cursor: pointer;
   color: var(--black);
 }
-
 .nav .lang-wrap .lang-menu .lang:hover {
   color: var(--g600);
 }
@@ -150,7 +149,6 @@
   display: block;
   object-fit: contain;
 }
-
 /* hero */
 .hero-section {
   position: relative;
@@ -168,7 +166,6 @@
   height: 100%;
   object-fit: cover;
 }
-
 /* tal */
 .tal-section {
   position: relative;
@@ -252,10 +249,11 @@
   /* gap: 0px; */
   align-items: center;
   /* justify-content: center; */
-  opacity: 0.5;
+  opacity: 0.08;
   z-index: 1;
   flex-direction: column;
-  transform: scale(0.95);
+  transform: scale(0.9);
+  pointer-events: none;
   transition:
     transform 0.7s ease,
     opacity 4s ease,
@@ -279,7 +277,8 @@
   width: 500px;
   height: 480px;
   border-radius: 15px;
-  opacity: 0.5;
+  opacity: 1;
+  /* z-index: 1; */
   transition: opacity 0.68s ease;
   object-fit: cover;
   visibility: visible;
@@ -294,9 +293,13 @@
   width: max-content;
 }
 .tal-section .inner .swiper .swiper-wrapper .swiper-slide-active {
+  /* transform: scale(1.05);
+  z-index: 10;
+  opacity: 1; */
+  opacity: 1;
   transform: scale(1.05);
   z-index: 10;
-  opacity: 1;
+  pointer-events: auto;
 }
 .tal-section .inner .swiper .swiper-wrapper .swiper-slide-active .slide-info {
   position: relative;
@@ -315,7 +318,7 @@
   display: flex;
   transform: scale(1.05);
   /* gap: 300px; */
-  /* z-index: 10; */
+  z-index: 10;
   opacity: 1;
   transition: transform 0.4s;
   /* height: 500px; */
@@ -341,6 +344,14 @@
   /* transform: translateX(-50%); */
   /* color: var(--black); */
 }
+.tal-section .inner .swiper .swiper-wrapper .swiper-slide-prev,
+.tal-section .inner .swiper .swiper-wrapper .swiper-slide-next {
+  opacity: 0.8;
+  z-index: 5;
+}
+.swiper-slide-duplicate {
+  opacity: 0;
+}
 /* tal-swiper */
 
 .tal-section .tal-btn {
@@ -361,7 +372,6 @@
   background-color: var(--white);
   border-radius: 46px;
 }
-
 .tal-section .tal-btn .google-btn:hover {
   background-color: var(--n500);
 }
@@ -496,7 +506,6 @@
   border-radius: 15px;
   gap: 15px;
 }
-
 .grow-section .inner .grow-title .sub-title .cumulative h2 {
   font-size: 28px;
   font-weight: 600;
@@ -577,7 +586,6 @@
   text-align: center;
   color: var(--black);
 }
-
 .grow-section .inner .grow-title .sub-title .amount:hover {
   background-color: var(--black);
 }
@@ -592,12 +600,18 @@
   position: relative;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 .grow-section .inner .grow-media iframe {
   width: 100%;
   height: 100%;
+  /* pointer-events: none; */
 }
+/* .grow-section .inner .grow-media .video-cover {
+  position: absolute;
+  inset: 0;
+  z-index: 2;
+} */
 .grow-section .inner .grow-bot-title {
   position: relative;
   align-items: center;
@@ -624,7 +638,6 @@
   /* padding-bottom: 500px; */
   /* overflow-x: none; */
 }
-
 .service-section .mb-br {
   display: none;
 }
@@ -637,7 +650,6 @@
 .service-section .mb-real-br {
   display: none;
 }
-
 .service-section .mb-real-br {
   display: none;
 }
@@ -839,7 +851,6 @@
   font-size: var(--xxx-large);
   /* line-height: 150%; */
 }
-
 .service-section .inner .service-wrap .info-description .info-caption-left {
   position: relative;
   width: 100%;
@@ -853,7 +864,6 @@
   position: relative;
   width: 100%;
 }
-
 .service-section .inner .service-wrap .info-description .info-title-right h3 {
   text-align: right;
   font-weight: 600;
@@ -864,7 +874,6 @@
   position: relative;
   width: 100%;
 }
-
 .service-section .inner .service-wrap .info-description .info-caption-right p {
   text-align: right;
   line-height: 1.5;
@@ -1015,7 +1024,6 @@
   flex-direction: row;
   flex: 1;
 }
-
 .partnership-main .partnership-mkt {
   /* width: 340px; */
   /* width: 100%; */
@@ -1201,6 +1209,13 @@
   top: 50px;
   left: 830px;
   z-index: 5;
+  /* width: 100%; */
+  /* position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transform: translate(95%, 50%);
+  z-index: 5; */
 }
 .partnership-section .eye-sticker img {
   width: 97px;
@@ -1295,7 +1310,6 @@
   color: var(--white);
   text-align: center;
 }
-
 .guide-section .guide-img .info .btn {
   position: relative;
   display: flex;
